--- a/frame/frame.view.css
+++ b/frame/frame.view.css
@@ -1,9 +1,9 @@
-/* @keyframes hd_space_frame_show {
+/* @keyframes gd_web_frame_show {
 	from {
 		opacity: 0;
 	}
 }
 
-[hd_space_frame] {
-	animation: 5s -1s ease-in hd_space_frame_show;
+[gd_web_frame] {
+	animation: 5s -1s ease-in gd_web_frame_show;
 } */
